FIX z-index toggle button

--- a/src/app/components/toggle-button/toggle-button.component.css
+++ b/src/app/components/toggle-button/toggle-button.component.css
@@ -2,7 +2,7 @@
     position: fixed;
     top: 0;
     right: 0;
-    z-index: 60;
+    z-index: 1500;
   
     display: flex;
     justify-content: center;
